boreal/tests/assets/invalid_files/parsing/string_modifier_incompatible4.yar
rule a {
    strings:
        $a = "a" base64 nocase
    condition:
        $a
}
